--- a/package.json
+++ b/package.json
@@ -1,7 +1,18 @@
 {
   "name": "colors",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "private": false,
+  "description": "HEX to RGB converter and Contrast Checker",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kamilwyremski/colors"
+  },
+  "license": "MIT",
+  "author": {
+    "name": "Kamil Wyremski",
+    "email": "kamil@wyremski.pl",
+    "url": "https://wyremski.pl/en"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -16,6 +27,7 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
     "next": "13.4.8",
+    "next-pwa": "^5.6.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
