--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "colors",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "private": false,
   "description": "HEX to RGB converter and Contrast Checker",
   "repository": {
@@ -27,7 +27,7 @@
     "autoprefixer": "10.4.15",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
-    "next": "13.4.19",
+    "next": "^13.5.6",
     "next-pwa": "^5.6.0",
     "postcss": "8.4.29",
     "react": "18.2.0",
